Update website: add privacy policy pages, update German version, modify hero title and about text

--- a/index-de.html
+++ b/index-de.html
@@ -106,9 +106,9 @@
                 <!-- Hero Section -->
                 <section id="home" class="hero" style="background: #f5f6f7 !important;">
                     <div class="container">
-                        <h1 class="hero-title">Mechanical 3D CAD <span class="separator">•</span> Technische Dokumentation <span class="separator">•</span> Produktentwicklung</h1>
+                        <h1 class="hero-title">3D CAD Konstruktion <span class="separator">•</span> Technische Dokumentation <span class="separator">•</span> Produktentwicklung</h1>
                         <div class="hero-content">
-                            <h2 class="about-title">Hallo, ich bin Eugen.<br>Ich helfe Unternehmen, mechanische Produkte und Ausrüstungen bereitzustellen, indem ich CAD, Engineering und technische Dokumentation bereitstelle — von der Konzeption und Basisplanung bis zum detaillierten Design und Übergabe.<br><a href="#about-text" class="learn-more-link">Mehr über mich erfahren →</a></h2>
+                            <h2 class="about-title">Hi, ich bin Eugen.<br>Ich unterstütze Unternehmen bei der Entwicklung und Umsetzung von Apparaten, Anlagen und Maschinen durch CAD-Konstruktion, Engineering und technische Dokumentation – von der Konzept- und Basic-Engineering-Phase bis hin zur Detailkonstruktion und Übergabe.<br><a href="#about-text" class="learn-more-link">Mehr über mich →</a></h2>
                             <div class="hero-image">
                                 <img src="IM3.jpg" alt="IM3" class="hero-img">
                             </div>
@@ -208,7 +208,7 @@
             <!-- Footer -->
             <footer class="footer">
                 <div class="container">
-                    <p>&copy; {{ currentYear }} IEV PROJECT. Alle Rechte vorbehalten. | <a href="#impressum" class="impressum-link">Impressum</a> | <a href="#cookie-policy" class="impressum-link">Cookie-Richtlinie (EU)</a></p>
+                    <p>&copy; {{ currentYear }} IEV PROJECT. Alle Rechte vorbehalten. | <a href="impressum.html" class="impressum-link">Impressum</a> | <a href="cookie-policy.html" class="impressum-link">Cookie-Richtlinie (EU)</a> | <a href="datenschutz.html" class="impressum-link">Datenschutzerklärung</a></p>
                 </div>
             </footer>
         </div>
