--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
                 <!-- Hero Section -->
                 <section id="home" class="hero" style="background: #f5f6f7 !important;">
-                    <div class="container">
-                        <h1 class="hero-title">Mechanical 3D CAD <span class="separator">•</span> Technical Documentation <span class="separator">•</span> Product Development</h1>
+                    <div class="container" style="text-align: center !important; padding-left: 20px !important; padding-right: 20px !important; display: flex !important; flex-direction: column !important; align-items: center !important;">
+                        <h1 class="hero-title" style="text-align: center !important; margin: 0 !important; padding: 0 !important; width: 100% !important;">Mechanical 3D CAD <span class="separator" style="margin: 0 0.05rem !important;">•</span> Technical Documentation <span class="separator" style="margin: 0 0.05rem !important;">•</span> Product Development</h1>
                         <div class="hero-content">
-                            <h2 class="about-title">Hi, I'm Eugen.<br>I help companies deliver mechanical products and equipment by providing CAD, engineering, and technical documentation — from concept and basic engineering through to detailed design and handover.<br><a href="#about-text" class="learn-more-link">Learn more about me →</a></h2>
+                            <h2 class="about-title">Hi, I'm Eugen.<br>I help companies deliver industrial equipment and mechanical products by providing CAD, engineering, and technical documentation — from concept and basic engineering through to detailed design and handover.<br><a href="#about-text" class="learn-more-link">Learn more about me →</a></h2>
                             <div class="hero-image">
                                 <img src="IM3.jpg" alt="IM3" class="hero-img">
                             </div>
@@ -122,9 +122,10 @@
                         <h2 class="section-title">About Me</h2>
                         <div class="about-content">
                             <div id="about-text" class="about-text">
-                                <p>Mechanical engineer with over 12 years of experience in industrial design.</p>
-                                <p>Core experience in pressure vessels, steam boilers, piping systems, steel structures, and related industrial equipment for the energy, chemical, oil & gas, and food industries.</p>
-                                <p>Holds a Bachelor's and Master's degree in Mechanical Engineering and Mechatronics (2006–2012). From 2014 to 2016, worked on end-to-end mechanical development of high-end audio equipment for a startup in Warsaw, including full technical documentation, certification, and setup of production and supply chains. Over the following nine years, worked in Germany as a design engineer, project engineer, and project manager on pressure vessels, steam boilers, chemical reactors, steel structures and process piping in accordance with DIN EN, AD 2000, and ASME standards, contributing to international projects for clients such as Linde, Accsys, BAT, Nestlé, Shell, ADM, Hitachi, and others. Additionally, as a side project, I co-founded Dotyk Fingers, a startup focused on developing body-powered finger prostheses for people with disabilities, where I served as CEO and led the product's technical development.</p>
+                                <p>Mechanical engineer with 12+ years of experience delivering industrial equipment and mechanical systems for international projects.</p>
+                                <p>My core expertise covers pressure vessels, steam boilers, piping systems, steel structures, plant engineering and related mechanical equipment for the energy, chemical, oil & gas, and food industries.</p>
+                                <p>I support projects end-to-end — from concept and basic engineering to detailed design, technical documentation, and handover for manufacturing — working in compliance with DIN EN, AD 2000, and ASME standards.</p>
+                                <p>Over the years, I have contributed to projects for German and international clients including Linde, Nestlé, Shell, ADM, Hitachi, BAT, Accsys, and others, collaborating with multidisciplinary teams and suppliers. Alongside industrial engineering, I co-founded Dotyk Fingers, a hardware startup developing body-powered finger prostheses. As CEO and technical lead, I was responsible for product development, prototyping, certification, and production setup — giving me hands-on experience beyond classical engineering roles.</p>
                             </div>
                         </div>
                     </div>
@@ -208,7 +209,7 @@
             <!-- Footer -->
             <footer class="footer">
                 <div class="container">
-                    <p>&copy; {{ currentYear }} IEV PROJECT. All rights reserved. | <a href="#impressum" class="impressum-link">Impressum</a> | <a href="#cookie-policy" class="impressum-link">Cookie-Richtlinie (EU)</a></p>
+                    <p>&copy; {{ currentYear }} IEV PROJECT. All rights reserved. | <a href="impressum.html" class="impressum-link">Impressum</a> | <a href="cookie-policy-en.html" class="impressum-link">Cookie Policy (EU)</a> | <a href="privacy-policy.html" class="impressum-link">Privacy Policy</a></p>
                 </div>
             </footer>
         </div>
