--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav class="navbar subpage-nav" style="background: #f5f6f7 !important;">
+        <div class="container">
+            <div class="nav-brand">
+                <a href="index-de.html">
+                    <img src="logo3.png" alt="Logo" class="logo-img-static">
+                    <span>IEV PROJECT</span>
+                </a>
+            </div>
+            <div class="nav-right">
+                <ul class="nav-menu">
+                    <li><a href="index-de.html#home">Startseite</a></li>
+                    <li><a href="index-de.html#about">Über mich</a></li>
+                    <li><a href="index-de.html#services">Dienstleistungen</a></li>
+                    <li><a href="index-de.html#contact">Kontakt</a></li>
+                </ul>
+                <div class="language-switcher">
+                    <a href="cookie-policy-en.html" class="lang-btn">EN</a>
+                    <a href="cookie-policy.html" class="lang-btn active">DE</a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <div class="page-wrapper" style="background: #f5f6f7;">
         <div class="container" style="padding: 100px 20px; max-width: 1200px; margin: 0 auto;">
             <h1 style="font-size: 2rem; margin-bottom: 2rem; text-align: center;">Cookie-Richtlinie (EU)</h1>
